# monokai-pro-for-matplotlib

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
src/monokai_pro_for_matplotlib/: __init__.py  create_stylesheets.py  interface.py  main.py  template.mplstyle  themes.py
src/monokai_pro_for_matplotlib/monokai-pro/: classic.mplstyle  machine.mplstyle  octagon.mplstyle  ristretto.mplstyle  spectrum.mplstyle
src/monokai_pro_matplotlib/: machine.mplstyle  main.py  palette.py  template.mplstyle  themes.py
src/monokai_pro_matplotlib/monokai-pro/: machine.mplstyle
tests/: plot_example.py  test_stylesheets.py  test_theme_classes.py  test_unit.py
