[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monokai_pro_for_matplotlib"
version = "0.0.1"
authors = [
    { name = "Raphael Stascheit", email = "author@example.com" },
]
description = "Monokai Pro Color Themes for Matplotlib"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/meredithheskethfortescue/monokai-pro-for-matplotlib"
"Bug Tracker" = "https://github.com/meredithheskethfortescue/monokai-pro-for-matplotlib/issues"
